--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+        <link rel="alternate icon" href="/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Vite + React + TS</title>
+        <title>Lean View - PQ Devnet Visualizer</title>
+        <meta name="description" content="Lightweight monitoring tool for visualizing the health and status of the PQ Devnet" />
     </head>
     <body>
         <div id="root"></div>
